--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, initial-scale=1.0">
         <title>Toba Odumosu</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
 
     <body>
