Minor changes to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <li class="navbar__item">
                         <a href="#type3" class="navbar__links" id="portfolio">portfolio</a>
                     </li>
-                    <li class="navbar__item">
+                    <!--<li class="navbar__item">
                         <a href="#services" class="navbar__links" id="services">services</a>
-                    </li>
+                    </li>-->
                     
                 </ul>
             </div>
