--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, initial-scale=1.0">
         <title>Toba Odumosu</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
 
@@ -22,7 +23,7 @@
                         <a href="#home" class="navbar__links" id="home-page">home</a>
                     </li>
                     <li class="navbar__item">
-                        <a href="#type3" class="navbar__links" id="portfolio">portfolio</a>
+                        <a href="#portfolioref" class="navbar__links" id="portfolio">portfolio</a>
                     </li>
                     <!--<li class="navbar__item">
                         <a href="#services" class="navbar__links" id="services">services</a>
@@ -45,7 +46,7 @@
     </section>
     <section>
         <div class="portfolio" id="portfolio">
-            <div class="portfolio_container">
+            <div class="portfolio_container" id="portfolioref">
                 <div class="type3" id="type3">
                 <p>Pick a card, any card.</p>
                 </div>
@@ -73,6 +74,50 @@
                         
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="about-me" id="about-me">
+            <div class="about-me_container">
+                <div class="type4" id="type4">
+                    <p>thanks for checking out my portfolio</p>
+                </div>
+                <script>
+                    $(document).scroll(function() {
+    if($(document).scrollTop() >= 1400 ) {
+        $('.type4 p').addClass('typing');
+    }
+    else {
+        $('.type4 p').removeClass('typing');
+    }
+});
+                </script>
+                <div class="profile-card">
+                    <img src="images/portfolio-piccrop.png">
+                </div>
+                <div class="type5" id="type5">
+                    <p>check out my social links below</p>
+                </div>
+                <script>
+                    $(document).scroll(function() {
+    if($(document).scrollTop() >= 1400 ) {
+        $('.type5 p').addClass('typing');
+    }
+    else {
+        $('.type5 p').removeClass('typing');
+    }
+});
+                </script>
+            </div>
+        </div>
+    </section>
+    <section class="social__media">
+        <div class="social__media--wrap">
+            <div class="social__icons">
+                <a href="https://linkedin.com/in/toba-odumosu-a6068a168" class="social__icons--link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/tob-ss" class="social__icons--link"><i class="fab fa-github"></i></a>
+                <a href="/" class="social__icons--link"><i class="far fa-file"></i></a>
             </div>
         </div>
     </section>
