--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <li class="navbar__item">
                         <a href="#portfolioref" class="navbar__links" id="portfolio">portfolio</a>
                     </li>
-                    <!--<li class="navbar__item">
-                        <a href="#services" class="navbar__links" id="services">services</a>
-                    </li>-->
+                    <li class="navbar__item">
+                        <a href="#about-me" class="navbar__links" id="aboutme">socials</a>
+                    </li>
                     
                 </ul>
             </div>
@@ -117,7 +117,7 @@
             <div class="social__icons">
                 <a href="https://linkedin.com/in/toba-odumosu-a6068a168" class="social__icons--link"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/tob-ss" class="social__icons--link"><i class="fab fa-github"></i></a>
-                <a href="/" class="social__icons--link"><i class="far fa-file"></i></a>
+                <a href="Oloruntoba Odumosu CV 2022.pdf" class="social__icons--link"><i class="far fa-file"></i></a>
             </div>
         </div>
     </section>
