Minor changes to index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="portfolio" id="portfolio">
             <div class="portfolio_container" id="portfolioref">
                 <div class="type3" id="type3">
-                <p>Pick a card, any card.</p>
+                <p>pick a card, any card</p>
                 </div>
                 <script>
                     $(document).scroll(function() {
