Feat logo hyperlik to personal website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo">toba odumosu</a>
+                <a href="https://tobaodumosu.com" id="navbar__logo">toba odumosu</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span><span class="bar"></span>
                     <span class="bar"></span>
