Chore: added personal website icon to social media section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                 <a href="https://linkedin.com/in/toba-odumosu-a6068a168" class="social__icons--link"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/tob-ss" class="social__icons--link"><i class="fab fa-github"></i></a>
                 <a href="Oloruntoba Odumosu CV 2022.pdf" class="social__icons--link"><i class="far fa-file"></i></a>
+                <a href="https://tobaodumosu.com/" class="social__icons--link">
+                    <i class="fas fa-user"></i>
+                </a>
             </div>
         </div>
     </section>
