Major: Added eat Diverse to projects, added image and link to cards

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                        <a class="cover-link" href="https://tob-ss.github.io/esports-academy-redesign/"></a>
                     </div>
                     <div class="big-card">
-                        
+                        <a class="cover-link" href="https://tob-ss.github.io/simple-shopping-cart/"></a>
                     </div>
                     <div class="big-card">
                         
