Major: Added X2Z wordpress theme project to projects

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="cover-link" href="https://tob-ss.github.io/simple-shopping-cart/"></a>
                     </div>
                     <div class="big-card">
-                        
+                        <a class="cover-link" href="https://tobaodumosu.com/portfolio/project1"></a>
                     </div>
                     <div class="big-card">
                         
